# http-sse-event-viewer

./: README.md  pyproject.toml
sse_sub/: main.py
