[tool.poetry]
name = "sse-sub"
version = "0.1.0"
description = ""
authors = ["lilith <lilith>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
requests-sse = "^0.3.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
